syntax = "proto3";

package task;


service TaskService {
  rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse) {}
}

message Meta {
  int32 status = 1;
  optional string message = 2;
}

message Task {
  string id = 1;
  optional string parentId = 2;
  string title = 3;
  string description = 4;
  string createdAt = 5;
  optional string updatedAt = 6;
  repeated Task subTasks = 7;
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
  optional string parentId = 3;
}

message CreateTaskResponse {
  Meta meta = 1;
  optional Task task = 2;
}